# smart-panda

./: .gitignore  Cargo.toml  LICENSE  Readme.md  index.html  index.js  package-lock.json  package.json  test.html  webpack-test.config.js  webpack.config.js
js/: agent_state.js  board.js  brain.js  draw.js  feature_functions.js  fps.js  game_score.js  learning_agent.js  random_agent.js  random_player.js  user_interface.js  utils.js
js/brains/: monte_carlo.js  random_search.js
spec/: board.spec.js  brain.spec.js  js_utils.spec.js  monte_carlo.spec.js  runner.js  rust.spec.js  utils.js
src/: board.rs  feature_functions.rs  gamestate.rs  lib.rs  main.rs  piece.rs  utils.rs
src/gamestate/: board.rs  feature_functions.rs  piece.rs
src/gamestate/feature_functions/: aggregate_height.rs  covered_cells.rs  delta_height.rs  number_of_holes.rs  surface_variance.rs  vertical_roughness.rs
