[package]
name = "smart-panda"
version = "0.1.0"
authors = ["h3nnn4n <uber.renan@gmail.com>"]

[dependencies]
rand = "0.3.15"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
