[package]
name = "smart-panda"
version = "0.1.0"
authors = ["h3nnn4n <uber.renan@gmail.com>"]

[dependencies]
wasm-bindgen = "0.2.37"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies.web-sys]
version = "0.3.14"
features = [
  "console",
]

[dependencies.rand]
version = "0.6.5"
features = [
  "wasm-bindgen",
]
